--- a/.github/workflows/testpw.yml
+++ b/.github/workflows/testpw.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo -E apt-get update -yqq
-          sudo -E apt-get full-upgrade -yqq
+          sudo -E apt-get dist-upgrade -yqq
           sudo -E apt-get install $(curl -fsSL git.io/depends-ubuntu-2004)
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get -qq clean
