--- a/.github/workflows/masterpw.yml
+++ b/.github/workflows/masterpw.yml
@@ -148,6 +148,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
+          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
           CONFIG_PACKAGE_luci-app-sqm=y
 
