--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -10,7 +10,7 @@
 # <https://github.com/LemoFire/autoOpenWrt>
 #
 
-name: testmasterpw
+name: officialpw
 
 on:
   push:
@@ -24,12 +24,8 @@ jobs:
     name: 树莓派4B
 
     runs-on: ubuntu-20.04
-    if: github.event.repository.owner.id == github.event.sender.id || ! github.event.sender.id
 
     steps:
-      - name: 校验本地文件
-        uses: actions/checkout@main
-
       - name: 初始化系统环境
         env:
           DEBIAN_FRONTEND: noninteractive
@@ -38,9 +34,13 @@ jobs:
           sudo -E apt-get update -yqq
           sudo -E apt-get dist-upgrade -yqq
           sudo -E apt-get install $(curl -fsSL git.io/depends-ubuntu-2004)
+          sudo -E systemctl daemon-reload
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E timedatectl set-timezone "Asia/Shanghai"
+
+      - name: 校验本地文件
+        uses: actions/checkout@main
 
       - name: 克隆源码
         run: |
