--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -26,7 +26,10 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: 初始化系统环境
+    - name: Checkout
+      uses: actions/checkout@main
+
+    - name: 初始化系统环境
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
@@ -34,13 +37,9 @@ jobs:
           sudo -E apt-get update
           sudo -E apt-get -y dist-upgrade
           sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget curl swig rsync
-          sudo -E systemctl daemon-reload
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           sudo -E timedatectl set-timezone "Asia/Shanghai"
-
-      - name: 校验本地文件
-        uses: actions/checkout@main
 
       - name: 克隆源码
         run: |
