--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -108,6 +108,7 @@ jobs:
           # IPv6支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
+          CONFIG_PACKAGE_dnsmasq-full_ipset=y
           CONFIG_PACKAGE_ip6tables-mod-nat=y
           CONFIG_PACKAGE_ipv6helper=y
 
