--- a/.github/workflows/qbt.yml
+++ b/.github/workflows/qbt.yml
@@ -138,10 +138,10 @@ jobs:
           CONFIG_PACKAGE_luci-app-fileassistant=y
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-turboacc=y
-          CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
-          CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE is not set
-          CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM is not set
-          CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD is not set
+          # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
+          # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE is not set
+          # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM is not set
+          # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD is not set
           CONFIG_PACKAGE_luci-app-hd-idle=y
           CONFIG_PACKAGE_luci-app-opkg=y
           CONFIG_PACKAGE_luci-app-passwall=y
