--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -81,6 +81,8 @@ jobs:
           git clone https://github.com/symonlee/openwrt-smartdns xipk
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
+          svn co https://github.com/kiddin9/openwrt-packages/trunk/qBittorrent-static
+          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
