--- a/.github/workflows/ikghxpwqbt.yml
+++ b/.github/workflows/ikghxpwqbt.yml
@@ -84,6 +84,7 @@ jobs:
           rm -rf luci-app-adguardhome
           rm -rf luci-app-fileassistant
           rm -rf luci-app-passwall
+          rm -rf luci-app-ssr-plus
 
       - name: 安装feeds源
         run: |
