--- a/.github/workflows/ikghxpwqbt.yml
+++ b/.github/workflows/ikghxpwqbt.yml
@@ -186,6 +186,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-qbittorrent-simple_dynamic is not set
           CONFIG_PACKAGE_luci-app-samba4=y
           CONFIG_PACKAGE_luci-app-sqm=y
+          CONFIG_PACKAGE_luci-app-transmission=y
 
           # 常用软件包:
           CONFIG_PACKAGE_AdGuardHome=y
