--- a/.github/workflows/ikghxpwqbt.yml
+++ b/.github/workflows/ikghxpwqbt.yml
@@ -98,13 +98,11 @@ jobs:
           git clone https://github.com/symonlee/luci-app-adguardhome
           git clone https://github.com/symonlee/openwrt-smartdns xipk
           pushd xipk
-          rm -rf luci-app-qbittorrent-simple
-          rm -rf qBittorrent-static
+          rm -rf AdGuardHome
           popd
+          svn co https://github.com/symonlee/pd-adg-etc/trunk/AdGuardHome
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
-          svn co https://github.com/kiddin9/openwrt-packages/trunk/qBittorrent-static
-          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
@@ -114,13 +112,6 @@ jobs:
         run: |
           sed -i 's/192.168.9.1/192.168.1.1/g' package/base-files/files/bin/config_generate
           sed -i 's/OpenWrt-Life/OpenWrt/g' package/base-files/files/bin/config_generate
-          sed -i 's/ntp.ntsc.ac.cn/0.openwrt.pool.ntp.org/g' package/base-files/files/bin/config_generate
-          sed -i 's/cn.ntp.org.cn/1.openwrt.pool.ntp.org/g' package/base-files/files/bin/config_generate
-          sed -i 's/ntp.aliyun.com/2.openwrt.pool.ntp.org/g' package/base-files/files/bin/config_generate
-          sed -i 's/edu.ntp.org.cn/3.openwrt.pool.ntp.org/g' package/base-files/files/bin/config_generate
-          sed -i '329,331d' package/base-files/files/bin/config_generate
-          sed -i "s/timezone='.*'/timezone='HKT-8'/g" package/base-files/files/bin/config_generate
-          sed -i "/.*ttylogin='0'.*/i\                                set system.@system[-1].zonename='Asia/Hong Kong'" package/base-files/files/bin/config_generate
           sed -i 's/%D %V %C/OpenWrt 21.02-SNAPSHOT 21.02/g' package/base-files/files/etc/openwrt_release
           sed -i '6,$d' package/base-files/files/etc/banner
           rm -f ./.config*
@@ -181,19 +172,19 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+          CONFIG_PACKAGE_luci-app-qbittorrent-simple=y
           CONFIG_PACKAGE_luci-app-samba4=y
           CONFIG_PACKAGE_luci-app-sqm=y
-          CONFIG_PACKAGE_luci-app-transmission=y
 
           # 常用软件包:
           CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_ca-certificates=y
           CONFIG_PACKAGE_luci-compat=y
           CONFIG_PACKAGE_luci-lib-ipkg=y
-          CONFIG_PACKAGE_dnsproxy=y
           CONFIG_PACKAGE_fdisk=y
           CONFIG_PACKAGE_htop=y
           CONFIG_PACKAGE_luci=y
+          CONFIG_PACKAGE_smartdns=y
           CONFIG_PACKAGE_luci-theme-bootstrap=y
           CONFIG_PACKAGE_kmod-ipt-fullconenat=y
           CONFIG_PACKAGE_iptables-mod-fullconenat=y
