--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -79,6 +79,10 @@ jobs:
           cd openwrt-packages
           git clone https://github.com/symonlee/luci-app-adguardhome
           git clone https://github.com/symonlee/openwrt-smartdns xipk
+          pushd xipk
+          rm -rf AdGuardHome
+          popd
+          svn co https://github.com/symonlee/pd-adg-etc/trunk/AdGuardHome
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
           git clone https://github.com/xiaorouji/openwrt-passwall
@@ -156,10 +160,10 @@ jobs:
           CONFIG_PACKAGE_ca-certificates=y
           CONFIG_PACKAGE_luci-compat=y
           CONFIG_PACKAGE_luci-lib-ipkg=y
-          CONFIG_PACKAGE_dnsproxy=y
           CONFIG_PACKAGE_fdisk=y
           CONFIG_PACKAGE_htop=y
           CONFIG_PACKAGE_luci=y
+          CONFIG_PACKAGE_smartdns=y
           CONFIG_PACKAGE_luci-theme-bootstrap=y
           # CONFIG_PACKAGE_wpad-basic-wolfssl is not set
           # CONFIG_XRAY_CORE_COMPRESS_UPX is not set
