--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -85,6 +85,7 @@ jobs:
           svn co https://github.com/symonlee/pd-adg-etc/trunk/AdGuardHome
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
+          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
@@ -152,6 +153,8 @@ jobs:
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
           CONFIG_PACKAGE_luci-app-qbittorrent-simple=y
+          CONFIG_PACKAGE_luci-app-qbittorrent-simple_static=y
+          # CONFIG_PACKAGE_luci-app-qbittorrent-simple_dynamic is not set
           CONFIG_PACKAGE_luci-app-samba4=y
           CONFIG_PACKAGE_luci-app-sqm=y
 
