--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone --depth 1 https://github.com/openwrt/openwrt
+          git clone -b master --single-branch https://github.com/openwrt/openwrt
           mv ./openwrt/* ./
 
       - name: 更新feeds源
