--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b 15 --single-branch https://github.com/graysky2/openwrt
+          git clone -b master --single-branch https://github.com/openwrt/openwrt
           mv ./openwrt/* ./
 
       - name: 更新feeds源
@@ -81,7 +81,6 @@ jobs:
           git clone https://github.com/symonlee/openwrt-smartdns xipk
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
-          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
