--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -86,6 +86,7 @@ jobs:
           svn co https://github.com/symonlee/pd-adg-etc/trunk/smartdns
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
+          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
