--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -79,9 +79,10 @@ jobs:
           cd openwrt-packages
           git clone https://github.com/symonlee/luci-app-adguardhome
           git clone https://github.com/symonlee/openwrt-smartdns xipk
-          rm -rf AdGuardHome
+          rm -rf AdGuardHome2
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
+          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
@@ -132,6 +133,7 @@ jobs:
           CONFIG_LUCI_LANG_zh_Hans=y
 
           # 常用LuCI插件选择:
+          CONFIG_PACKAGE_luci-app-adguardhome=y
           CONFIG_PACKAGE_luci-app-fileassistant=y
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-hd-idle=y
@@ -147,9 +149,11 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+          CONFIG_PACKAGE_luci-app-qbittorrent-simple=y
+          CONFIG_PACKAGE_luci-app-qbittorrent-simple_static=y
+          # CONFIG_PACKAGE_luci-app-qbittorrent-simple_dynamic is not set
           CONFIG_PACKAGE_luci-app-samba4=y
           CONFIG_PACKAGE_luci-app-sqm=y
-          CONFIG_PACKAGE_luci-app-transmission=y
 
           # 常用软件包:
           CONFIG_PACKAGE_AdGuardHome=y
