--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -79,6 +79,9 @@ jobs:
           cd openwrt-packages
           git clone https://github.com/symonlee/luci-app-adguardhome
           git clone https://github.com/symonlee/openwrt-smartdns xipk
+          pushd xipk
+          rm -rf AdGuardHome
+          popd
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
@@ -154,7 +157,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-sqm=y
 
           # 常用软件包:
-          CONFIG_PACKAGE_adguardhome=y
+          CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_ca-certificates=y
           CONFIG_PACKAGE_dnsproxy=y
           CONFIG_PACKAGE_luci-compat=y
