--- a/.github/workflows/ledepwqbt.yml
+++ b/.github/workflows/ledepwqbt.yml
@@ -69,6 +69,9 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/symonlee/openwrt-smartdns xipk
+          pushd xipk
+          rm -rf AdGuardHome
+          popd
           svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-fileassistant
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
@@ -147,7 +150,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-sqm=y
 
           # 常用软件包:
-          CONFIG_PACKAGE_adguardhome=y
+          CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_ca-certificates=y
           CONFIG_PACKAGE_dnsproxy=y
           CONFIG_PACKAGE_luci-compat=y
