--- a/.github/workflows/ikghxpw.yml
+++ b/.github/workflows/ikghxpw.yml
@@ -99,6 +99,8 @@ jobs:
           popd
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
+          svn co https://github.com/kiddin9/openwrt-packages/trunk/automount
+          svn co https://github.com/kiddin9/openwrt-packages/trunk/ntfs3-mount
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
@@ -134,7 +136,7 @@ jobs:
           CONFIG_PACKAGE_ipv6helper=y
 
           # 文件系统支持:
-          CONFIG_PACKAGE_block-mount=y
+          CONFIG_PACKAGE_automount=y
 
           # 去掉板载无线:
           # CONFIG_PACKAGE_cypress-firmware-43455-sdio is not set
