--- a/.github/workflows/ikghxpw.yml
+++ b/.github/workflows/ikghxpw.yml
@@ -89,7 +89,7 @@ jobs:
         run: |
           ./scripts/feeds install -a
 
-      - name: Timezone
+      - name: Timezone patch
         run: |
           patch -p1 < patches/Patch-RPI-4.patch
 
