--- a/.github/workflows/™️ikghxcc.yml
+++ b/.github/workflows/™️ikghxcc.yml
@@ -193,7 +193,7 @@ jobs:
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
-          echo -e 'CONFIG_DEVEL=y\nCONFIG_CCACHE=y' >> .config; make defconfig
+          make defconfig
 
       - name: 下载软件包
         run: make download -j16
