--- a/.github/workflows/™️ikghxcc.yml
+++ b/.github/workflows/™️ikghxcc.yml
@@ -48,6 +48,8 @@ jobs:
 
       - name: Cache toolchain
         uses: HiGarfield/cachewrtbuild@main
+        with:
+          ccache: 'true'
 
       - name: 更新feeds源
         run: |
