--- a/.github/workflows/™️ikghxcc.yml
+++ b/.github/workflows/™️ikghxcc.yml
@@ -108,6 +108,8 @@ jobs:
           rm -rf AdGuardHome
           popd
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-fileassistant
+          svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
+          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
@@ -137,6 +139,8 @@ jobs:
           # IPv6支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
+          CONFIG_PACKAGE_ip6tables-mod-nat=y
+          CONFIG_PACKAGE_ipv6helper=y
 
           # 文件系统支持:
           CONFIG_PACKAGE_block-mount=y
