--- a/.github/workflows/immcc.yml
+++ b/.github/workflows/immcc.yml
@@ -10,7 +10,7 @@
 # <https://github.com/LemoFire/autoOpenWrt>
 #
 
-name: ™️liocc
+name: immcc
 
 on:
   push:
@@ -43,7 +43,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b 21.02 --single-branch https://github.com/Lienol/openwrt
+          git clone -b openwrt-21.02 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
       - name: Cache toolchain
@@ -57,7 +57,7 @@ jobs:
 
       - name: 删除部分packages文件
         run: |
-          pushd feeds/openwrt-packages/net
+          pushd feeds/packages/net
           rm -rf adguardhome
           rm -rf brook
           rm -rf chinadns-ng
@@ -86,13 +86,16 @@ jobs:
 
       - name: 删除部分luci文件
         run: |
-          pushd feeds/openwrt-luci/applications
-          rm -rf luci-app-fileassistant
+          pushd feeds/luci/applications
           rm -rf luci-app-passwall
 
       - name: 安装feeds源
         run: |
           ./scripts/feeds install -a
+
+      - name: Timezone patch
+        run: |
+          patch -p1 < patches/Patch-Imm-RPI-4.patch
 
       - name: 构建自定义文件结构
         run: |
@@ -103,10 +106,7 @@ jobs:
           pushd xipk
           rm -rf AdGuardHome
           popd
-          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-fileassistant
           svn co https://github.com/Lienol/openwrt-package/branches/other/lean/ipv6-helper
-          svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
-          svn co https://github.com/kiddin9/openwrt-packages/trunk/qBittorrent-static
           git clone https://github.com/xiaorouji/openwrt-passwall
           git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
@@ -135,11 +135,6 @@ jobs:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
           CONFIG_PACKAGE_ip6tables-mod-nat=y
-          CONFIG_PACKAGE_ipv6helper=y
-
-          # 文件系统支持:
-          CONFIG_PACKAGE_automount=y
-          CONFIG_PACKAGE_block-mount=y
 
           # 去掉板载无线:
           # CONFIG_PACKAGE_cypress-firmware-43455-sdio is not set
@@ -154,19 +149,8 @@ jobs:
           CONFIG_PACKAGE_kmod-usb3=y
 
           # 常用LuCI插件选择:
-          # CONFIG_PACKAGE_luci-app-accesscontrol is not set
-          # CONFIG_PACKAGE_luci-app-arpbind is not set
-          # CONFIG_PACKAGE_luci-app-aria2 is not set
-          # CONFIG_PACKAGE_luci-app-control-timewol is not set
-          # CONFIG_PACKAGE_luci-app-control-webrestriction is not set
-          # CONFIG_PACKAGE_luci-app-control-weburl is not set
-          # CONFIG_PACKAGE_luci-app-ddns is not set
+          # CONFIG_PACKAGE_luci-app-cpufreq is not set
           # CONFIG_PACKAGE_luci-app-filetransfer is not set
-          # CONFIG_PACKAGE_luci-app-ramfree is not set
-          # CONFIG_PACKAGE_luci-app-timecontrol is not set
-          # CONFIG_PACKAGE_luci-app-upnp is not set
-          # CONFIG_PACKAGE_luci-app-vlmcsd is not set
-          # CONFIG_PACKAGE_luci-app-wol is not set
           CONFIG_PACKAGE_luci-app-fileassistant=y
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-hd-idle=y
@@ -182,9 +166,16 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
-          CONFIG_PACKAGE_luci-app-qbittorrent-simple=y
+          CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-samba4=y
           CONFIG_PACKAGE_luci-app-sqm=y
+          # CONFIG_PACKAGE_luci-app-turboacc is not set
+          # CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH is not set
+          CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING=y
+          # CONFIG_PACKAGE_TURBOACC_INCLUDE_FAST_CLASSIFIER is not set
+          # CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE_CM is not set
+          # CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA is not set
+          CONFIG_PACKAGE_luci-app-transmission=y
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
