--- a/.github/workflows/™️immcc.yml
+++ b/.github/workflows/™️immcc.yml
@@ -114,6 +114,8 @@ jobs:
 
       - name: 载入自定义配置
         run: |
+          sed -i 's/ImmortalWrt/OpenWrt/g' package/base-files/files/bin/config_generate
+          sed -i 's/%D %V %C/OpenWrt 21.02-SNAPSHOT 21.02/g' package/base-files/files/etc/openwrt_release
           sed -i 's/+chinadns-ng +dns2socks/+dns2socks/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/Makefile
           rm -f ./.config*
           touch ./.config
