--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -78,6 +78,10 @@ jobs:
         run: |
           patch -p1 < patches/Patch-main-RPI-4.patch
 
+      - name: Firewall patch
+        run: |
+          patch -p1 < patches/Patch-FirewallRPI-4.patch
+
       - name: 构建自定义文件结构
         run: |
           cd package
