--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -91,7 +91,7 @@ jobs:
           svn co https://github.com/immortalwrt/immortalwrt/trunk/package/emortal/ipv6-helper
           svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-qbittorrent-simple
           git clone https://github.com/xiaorouji/openwrt-passwall
-          git clone -b luci --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
+          git clone -b packages --single-branch https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           pushd luci-app-passwall/luci-app-passwall/root/etc
           rm -rf hotplug.d
 
